--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,44 @@
+appdirs==1.4.4
+astroid==2.4.2
+bcrypt==3.2.0
+beautifulsoup4==4.9.2
+bs4==0.0.1
+cffi==1.14.3
 click==7.1.2
+colorama==0.4.4
+distlib==0.3.1
 Faker==4.14.2
+filelock==3.0.12
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.25.0
 flask-marshmallow==0.13.0
 Flask-SQLAlchemy==2.4.4
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
 marshmallow-sqlalchemy==0.23.1
+mccabe==0.6.1
+mypy==0.790
+mypy-extensions==0.4.3
 psycopg2==2.8.6
+pycparser==2.20
+PyJWT==1.7.1
+pylint==2.6.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
+PyYAML==5.3.1
 six==1.15.0
+soupsieve==2.0.1
 SQLAlchemy==1.3.19
+tabulate==0.8.7
 text-unidecode==1.3
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+virtualenv==20.1.0
 Werkzeug==1.0.1
+wrapt==1.12.1
